Kubernetes/culturio-auth.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: culturio-auth
  name: culturio-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: culturio-auth
  template:
    metadata:
      labels:
        app: culturio-auth
    spec:
      containers:
      - image: culturiojv.azurecr.io/culturio-auth:latest
        name: culturio-auth
