Kubernetes/culturio-cultureobjects.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: culturio-cultureobjects
  name: culturio-cultureobjects
spec:
  replicas: 1
  selector:
    matchLabels:
      app: culturio-cultureobjects
  template:
    metadata:
      labels:
        app: culturio-cultureobjects
    spec:
      containers:
      - image: culturiojv.azurecr.io/culturio-cultureobjects:latest
        name: culturio-cultureobjects
