Kubernetes/culturio-packages.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: culturio-packages
  name: culturio-packages
spec:
  replicas: 1
  selector:
    matchLabels:
      app: culturio-packages
  template:
    metadata:
      labels:
        app: culturio-packages
    spec:
      containers:
      - image: culturiojv.azurecr.io/culturio-packages:latest
        name: culturio-packages
