Kubernetes/culturio-subscriptions.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: culturio-subscriptions
  name: culturio-subscriptions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: culturio-subscriptions
  template:
    metadata:
      labels:
        app: culturio-subscriptions
    spec:
      containers:
      - image: culturiojv.azurecr.io/culturio-subscriptions:latest
        name: culturio-subscriptions
