Kubernetes/culturio-users.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: culturio-users
  name: culturio-users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: culturio-users
  template:
    metadata:
      labels:
        app: culturio-users
    spec:
      containers:
      - image: culturiojv.azurecr.io/culturio-users:latest
        name: culturio-users
