Kubernetes/culturio-api.service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: culturio-api
  name: culturio-api
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: culturio-api
  type: NodePort
status:
  loadBalancer: {}
