Kubernetes/culturio-auth.service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: culturio-auth
  name: culturio-auth
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: culturio-auth
  type: ClusterIP
