Kubernetes/culturio-cultureobjects.service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: culturio-cultureobjects
  name: culturio-cultureobjects
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: culturio-cultureobjects
  type: ClusterIP
