Kubernetes/culturio-packages.service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: culturio-packages
  name: culturio-packages
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: culturio-packages
  type: ClusterIP
