Kubernetes/culturio-subscriptions.service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: culturio-subscriptions
  name: culturio-subscriptions
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: culturio-subscriptions
  type: ClusterIP
