Kubernetes/culturio-users.service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: culturio-users
  name: culturio-users
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: culturio-users
  type: ClusterIP
