Kubernetes/culturio-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: culturio-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: culturio-api
                port:
                  number: 80
